--- a/stationdata-converter/Station Data Converter/src/Station Data Converter/Properties/launchSettings.json
+++ b/stationdata-converter/Station Data Converter/src/Station Data Converter/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Station Data Converter": {
       "commandName": "Project",
-      "commandLineArgs": "spoorkaart.json"
+      "commandLineArgs": "spoorkaart.json nodes.txt"
     }
   }
 }
