--- a/GraphVisualizer/GraphVisualizer.csproj
+++ b/GraphVisualizer/GraphVisualizer.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics.Vectors">
       <HintPath>packages\System.Numerics.Vectors.4.1.1\lib\portable-net45+win8+wp8+wpa81\System.Numerics.Vectors.dll</HintPath>
     </Reference>
@@ -44,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GraphStatistics.cs" />
     <Compile Include="TestInput.cs" />
     <Compile Include="ASInput.cs" />
     <Compile Include="Edge.cs" />
