--- a/GraphVisualizer/GraphVisualizer.csproj
+++ b/GraphVisualizer/GraphVisualizer.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FruchtermanReingoldAlgorithm.cs" />
     <Compile Include="GraphStatistics.cs" />
     <Compile Include="TestInput.cs" />
     <Compile Include="ASInput.cs" />
@@ -56,7 +57,7 @@
     <Compile Include="NSInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleAlgorithm.cs" />
+    <Compile Include="EadesAlgorithm.cs" />
     <Compile Include="SubgraphSelector.cs" />
     <Compile Include="Visualizer.cs" />
   </ItemGroup>
